<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menutitle_showDurations">Durations Report</string>
    <string name="menutitle_settings">Settings</string>
    <string name="menutitle_showAbout">About Task Timer</string>
    <string name="menutitle_generate">Generate data</string>
    <string name="no_task_message">No task being timed</string>
    <string name="edit_button_description">Button to edit a tasks details</string>
    <string name="delete_button_description">Button to delete a task</string>
    <string name="addtitle_name">Task name required</string>
    <string name="addtitle_description">Task description (optional)</string>
    <string name="addtitle_sortorder">Orders: sorts low to high</string>
    <string name="addit_save">SAVE</string>
    <string name="addtitle_save">Save</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.\</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you want to abandon your changes, or continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Abandon changes</string>
    <string name="cancelEditDiag_negative_caption">Continue editing</string>
    <string name="about_copyright">Copyright \u00a9 2020 timifeoluwa.miniproject</string>
    <string name="about_weblink_v21">Instructions available at www.learnprogramming.academy</string>
    <string name="about_weblink">Instructions available at</string>
    <string name="about_url"><u>https://www.learnprogramming.academy</u></string>
    <string name="about_email">For support email tasktimer@learnprogramming.academy</string>
    <string name="about_url_error">No browser application found, cannot visit world-wide web</string>
    <string name="about_credits">Icon derived from  <b> analog clock</b> at http://pngimg.com by <b>Anonymous</b></string>
    <string name="timing_message">Currently timing %1$s</string>
    <string name="title_activity_durations_report">Durations Report</string>
</resources>
